# instream

./: .gitignore  LICENSE  README.md  __init__.py  app.py  build.sh  config.py  pyproject.toml  requirements.txt  utils.py
helpers/: __init__.py  validators.py
routes/: __init__.py  main.py  streaming.py
services/: __init__.py  stream_service.py  video_service.py
static/css/: style.css
templates/: dashboard.html  index.html
